unpackaged/main/default/objects/SPARTADMS__Workflow_History__c/SPARTADMS__Workflow_History__c.object-meta.xml
<CustomObject>
    <description>Workflow History</description>
    <label>Workflow History</label>
    <nameField>
        <displayFormat>WH# {YYYY}{MM}{DD}{0000}</displayFormat>
        <label>Workflow History Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>