unpackaged/main/default/objects/SPARTADMS__Workflow_History__c/fields/SPARTADMS__Approval_Step__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Approval_Step__c</fullName>
        <description>Workflow Step</description>
        <inlineHelpText>Workflow Step</inlineHelpText>
        <label>Workflow Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checkout</fullName>
                </value>
                <value>
                    <fullName>Send for Review</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Submit for Approval</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>Checkin</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>DRAFT</fullName>
                </value>
                <value>
                    <fullName>Review Completed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Effective</fullName>
                </value>
                <value>
                    <fullName>Submitted for Obsolete Approval</fullName>
                </value>
                <value>
                    <fullName>Submit for Approval(Admin)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>