unpackaged/main/default/objects/SPARTADMS__Workflow_History__c/fields/SPARTADMS__Comments__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Comments__c</fullName>
        <description>Comments</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>