unpackaged/main/default/objects/SPARTADMS__Workflow_History__c/fields/SPARTADMS__Deactivated__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deactivated status of reviewer or approver</description>
        <inlineHelpText>Deactivated status of reviewer or approver</inlineHelpText>
        <label>Deactivated</label>
        <type>Checkbox</type>
    </CustomField>