unpackaged/main/default/objects/SPARTADMS__Workflow_History__c/fields/SPARTADMS__Description__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>