unpackaged/main/default/objects/SPARTADMS__Workflow_History__c/fields/SPARTADMS__Document__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document__c</fullName>
        <description>Document</description>
        <inlineHelpText>Document</inlineHelpText>
        <label>Document</label>
        <referenceTo>SPARTADMS__Corporate_Document__c</referenceTo>
        <relationshipLabel>Workflow History</relationshipLabel>
        <relationshipName>Workflow_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>