unpackaged/main/default/objects/SPARTADMS__Workflow_History__c/fields/SPARTADMS__Document_Approver__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Document Approver</description>
        <inlineHelpText>Document Approver</inlineHelpText>
        <label>Document Approver</label>
        <referenceTo>SPARTADMS__Document_Approvers__c</referenceTo>
        <relationshipLabel>Workflow History</relationshipLabel>
        <relationshipName>Workflow_History</relationshipName>
        <type>Lookup</type>
    </CustomField>