unpackaged/main/default/objects/SPARTADMS__Workflow_History__c/fields/SPARTADMS__Document_Major_Version__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Major_Version__c</fullName>
        <description>Document major version value when workflow history created</description>
        <inlineHelpText>Document major version value when workflow history created</inlineHelpText>
        <label>Document Major Version</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>