unpackaged/main/default/objects/SPARTADMS__Workflow_History__c/fields/SPARTADMS__Document_Reviewer__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Document Reviewer</description>
        <inlineHelpText>Document Reviewer</inlineHelpText>
        <label>Document Reviewer</label>
        <referenceTo>SPARTADMS__Document_Reviewer__c</referenceTo>
        <relationshipLabel>Workflow History</relationshipLabel>
        <relationshipName>Workflow_History</relationshipName>
        <type>Lookup</type>
    </CustomField>