unpackaged/main/default/objects/SPARTADMS__Workflow_History__c/fields/SPARTADMS__Is_Rejected__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Is_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rejected</label>
        <type>Checkbox</type>
    </CustomField>