unpackaged/main/default/objects/SPARTADMS__Workflow_History__c/fields/SPARTADMS__Is_Reverted__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Is_Reverted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track whether the record is reverted during cancellation of DMS cycle</description>
        <inlineHelpText>Used to track whether the record is reverted during cancellation of DMS cycle</inlineHelpText>
        <label>Is Reverted</label>
        <type>Checkbox</type>
    </CustomField>