unpackaged/main/default/objects/SPARTADMS__Workflow_History__c/fields/SPARTADMS__Last_Updated_Datetime__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Last_Updated_Datetime__c</fullName>
        <description>Last Updated Datetime</description>
        <inlineHelpText>Last Updated Datetime</inlineHelpText>
        <label>Last Updated Datetime</label>
        <type>DateTime</type>
    </CustomField>