unpackaged/main/default/objects/SPARTADMS__Workflow_History__c/fields/SPARTADMS__Major_Version__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Major_Version__c</fullName>
        <description>Major Version</description>
        <inlineHelpText>Major Version</inlineHelpText>
        <label>Major Version</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>