unpackaged/main/default/objects/SPARTADMS__Workflow_History__c/fields/SPARTADMS__Minor_Version__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Minor_Version__c</fullName>
        <description>Draft Version</description>
        <inlineHelpText>Draft Version</inlineHelpText>
        <label>Draft Version</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>