unpackaged/main/default/objects/SPARTADMS__Workflow_History__c/validationRules/SPARTADMS__ManageWorkflowHistory.validationRule-meta.xml
<ValidationRule>
        <fullName>SPARTADMS__ManageWorkflowHistory</fullName>
        <active>false</active>
        <description>Manage workflow history</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL( SPARTADMS__Document__r.SPARTADMS__Version_Status__c , 'Approved'),
ISPICKVAL( SPARTADMS__Document__r.SPARTADMS__Version_Status__c , 'Effective'),
ISPICKVAL( SPARTADMS__Document__r.SPARTADMS__Version_Status__c , 'Obsolete'),
ISCHANGED( SPARTADMS__Document__c )
),
ISCHANGED( SPARTADMS__Deactivated__c )
)</errorConditionFormula>
        <errorMessage>Workflow history is locked.</errorMessage>
    </ValidationRule>